--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "@tailwindcss/vite": "^4.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.2"
+    "react-router-dom": "^7.4.1",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
