--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.2",
+    "axios": "^1.8.4",
+    "formik": "^2.4.6",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
