--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.1.2",
     "zod": "^3.24.2",
     "zod-formik-adapter": "^1.3.0"
